assets/css/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---

@charset "utf-8";

// Our variables
$base-url: "{{ site.baseurl }}";

// Credits: https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face
// San Francisco font: https://stackoverflow.com/a/36412339/7589046
@font-face {
  font-family: "San Francisco";
  font-weight: 400;
  // src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-regular-webfont.woff");
  src: url("{{ "/assets/fonts/sanfranciscodisplay-regular-webfont.woff" | absolute_url }}") format("woff");
}

$base-font-family: 'San Francisco', Georgia, Helvetica, Arial, sans-serif;
// $base-font-family: Charter, Georgia, Helvetica, Arial, sans-serif;
$base-font-size: 14px;
$small-font-size: $base-font-size * 0.875;
$base-line-height: 1.7;

$spacing-unit: 30px;

$text-color: #111;
$background-color: #fdfdfd;
$brand-color: #2a7ae2;

$grey-color: #828282;
$grey-color-light: #eee;
$grey-color-dark: #333;

$on-mobile: 500px;
$on-laptop: 800px;

@mixin media-query($device) {
  @media screen and (max-width: $device) {
    @content;
  }
}

// Import partials from `sass_dir` (defaults to `_sass`)
@import "base", "layout", "site", "work", "blog", "post", "404", "syntax";

